<resources>
    <string name="app_name">FindAParty</string>

    <string name="password_label">Password</string>
    <string name="title_activity_login">Sign in</string>
    <string name="passwordAgain_label">Confirm Password</string>
    <string name="password_hint_login"><font size="12">Password</font></string>
    <string name="google_api_key">AIzaSyBitsQWhIMva5MXLHNdA9C1LCm--m7OCng</string>

    <!-- Register page -->
    <string name="password_hint"><font size="12">Password (6 characters min)</font></string>
    <string name="password_confirm"><font size="12">Confirm Password</font></string>
    <string name="btn_registerR">Register</string>
    <string name="btn_back_login">Already have an account ?</string>
    <string name="firstName_label">First Name</string>
    <string name="firstName_hint"><font size="12">First Name</font></string>
    <string name="last_name_label">Last Name</string>
    <string name="last_name_hint"><font size="12">Last Name</font></string>
    <string name="yearOfBirth">Birth Date</string>
    <string name="yearOfBirth_hint"><font size="12">Birth Date</font></string>
    <string name="date_picker_label">Select date</string>
    <string name="error_intro">Please enter all the required information</string>
    <string name="error_join">Oops, can\'t register you ! Verify your information</string>
    <string name="error_blank_password">Your password must be at least 6 characters in length</string>
    <string name="error_mismatched_passwords">Your passwords doesn\'t match !</string>
    <string name="error_end">An error has occurred, verify your information</string>
    <string name="error_email">Please verify you email address</string>
    <string name="progress_signup">Signing Up&#8230;</string>

    <!-- Login Page -->
    <string name="progress_login">Loging In&#8230;</string>
    <string name="email_hint"><font size="12">Email</font></string>
    <string name="email_label">Email</string>
    <string name="btn_login">Log In</string>
    <string name="btn_registerL"><font size="10">No account ? Register here</font></string>
    <string name="btn_retrieve_password"><font size="10">Forgot your password ?</font></string>

    <!-- Password Reset Page -->
    <string name="password_reset">Enter your email address to receive password reset instructions</string>
    <string name="btn_reset">Send</string>


    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_search">Search</string>
    <string name="nav_create">Create</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>
    <string name="nav_logout">Log Out</string>

    <!-- Toolbar titles when navigation menu item is selected -->

    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="privacy_policy">Privacy Policy</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Toolbar -->
    <string name="search">Search</string>
    <string name="create">Create</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_searchable">SearchableActivity</string>

    <!-- Create LAN Fragment -->
    <string name="date_create_fragment">Date</string>
    <string name="starts_create_fragment">Starts at </string>
    <string name="ends_create_fragment">Ends at</string>
    <string name="nbr_people_create_fragment">Max invited people</string>
    <string name="btn_create_create_fragment">Create</string>
    <string name="dialog_title">Choose a number</string>
    <string name="cancel_button">"Cancel"</string>
    <string name="snackbar_text">End time must be after start time</string>
    <string name="snackbar_dismiss">Dismiss</string>
    <string name="progress_dialog_create">Creating your LAN...</string>
    <string name="text_title">DATE AND TIME</string>

    <!-- HomeFragment -->
    <string name="recent_tab">Recent</string>
    <string name="archive_tab">Finished</string>
    <string-array name="Numbers">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <!-- Settings -->
    <string name="profile_title">Your profile</string>
    <string name="profile_firstname">FIRSTNAME</string>
    <string name="profile_lastname">LASTNAME</string>
    <string name="profile_email">EMAIL</string>
    <string name="profile_address">ADDRESS</string>
    <string name="profile_zipcode">ZIP CODE</string>
    <string name="profile_city">CITY</string>
    <string name="profile_state">STATE</string>
    <string name="profile_save_button">SAVE</string>



</resources>
