<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.emile1.findaparty.Login">

    <TextView
        android:id="@+id/email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_alignParentStart="true"
        android:text="@string/email_label"
        android:textSize="16sp"
        android:paddingLeft="15dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_label"
        android:id="@+id/email"
        android:inputType="textEmailAddress"
        android:hint="@string/email_hint"
        android:textSize="14sp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"/>

    <TextView
        android:id="@+id/password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:text="@string/password_label"
        android:textSize="16sp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingTop="15dp"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:inputType="textPassword"
        android:layout_below="@id/password_label"
        android:layout_alignEnd="@id/email"
        android:hint="@string/password_hint"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_marginTop="25dp"
        android:background="@drawable/btn_login"
        android:padding="15dp"
        android:textColor="@color/textButtonLoginColor"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/btn_login"
        android:textSize="18dp"
        android:textAllCaps="false"
        android:fontFamily="sans-serif-medium" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/btn_login"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_below="@id/btn_login"
            android:text="@string/btn_register"
            android:textSize="@dimen/btn_register"
            android:textAllCaps="false" />
        <Button
            android:id="@+id/btn_retrieve_password"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/btn_login"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_below="@id/btn_login"
            android:text="@string/btn_retrieve_password"
            android:textSize="@dimen/btn_retrieve_password"
            android:textAllCaps="false"/>

</RelativeLayout>
