<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/Theme.App.Base"
    android:orientation="vertical"
    tools:context="com.example.emile1.findaparty.Activity.Activity.Password"
    android:weightSum="1">
    <TextView
        android:id="@+id/passwordResetLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_reset"
        android:layout_marginTop="100dp"
        android:textColor="@color/textViews"
        android:textSize="18sp"
        android:maxLines="2"/>
    <EditText
        android:id="@+id/etPasswordReset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/email_hint"
        android:textColor="@color/editTexts"
        android:layout_marginTop="50dp"
        android:maxLines="1"
        android:textColorHint="@color/editTexts"
        android:textSize="14sp" />
    <Button
        android:id="@+id/btnSendEmail"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/buttonLoginColor"
        android:layout_marginTop="30dp"
        android:text="@string/btn_reset"
        android:textColor="@android:color/white"/>
</LinearLayout>
