<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="30dp"
    android:paddingEnd="30dp"
    android:layout_marginTop="10dp"
    android:paddingTop="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/Theme.App.Base"
    tools:context="com.example.emile1.findaparty.Activity.CreateFragment">

    <TextView
        android:id="@+id/dateTextView"
        android:text="@string/date_create_fragment"
        android:textColor="@color/textViews"
        android:textSize="@dimen/font_size_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/dateLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/editTexts"
        android:layout_below="@+id/dateTextView"
        android:background="@drawable/et_rectangle_shape"
        android:layout_marginTop="10dp"
        app:hintEnabled="false">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/dateEditText"
            android:layout_width="match_parent"
            android:inputType="date"
            android:layout_height="wrap_content"
            android:textColorHint="@color/editTexts"
            android:drawableRight="@drawable/ic_today_black_24dp"
            android:focusable="false"
            android:textSize="@dimen/font_size_edittext" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/startsTextView"
        android:text="@string/starts_create_fragment"
        android:textColor="@color/textViews"
        android:textSize="@dimen/font_size_textview"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dateLayout"
        android:layout_alignParentStart="true" />
    <TextView
        android:id="@+id/endsTextView"
        android:textColor="@color/textViews"
        android:textSize="@dimen/font_size_textview"
        android:text="@string/ends_create_fragment"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:layout_below="@id/dateLayout"
        android:layout_alignEnd="@id/dateLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/endsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/editTexts"
        android:layout_below="@+id/endsTextView"
        android:layout_alignStart="@id/endsTextView"
        android:background="@drawable/et_rectangle_shape"
        android:layout_marginStart="-30dp"
        android:layout_marginTop="10dp"
        app:hintEnabled="false"
        android:layout_alignBottom="@+id/startsLayout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/endsEditText"
            android:layout_width="match_parent"
            android:inputType="datetime"
            android:layout_height="match_parent"
            android:textColorHint="@color/editTexts"
            android:layout_marginTop="10dp"
            android:drawableRight="@drawable/ic_clock_black_24dp"
            android:focusable="false"
            android:textSize="@dimen/font_size_edittext" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/startsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/startsTextView"
        android:layout_alignEnd="@id/startsTextView"
        android:layout_alignStart="@id/startsTextView"
        android:background="@drawable/et_rectangle_shape"
        android:layout_marginRight="-30dp"
        android:layout_marginLeft="-30dp"
        android:layout_marginTop="10dp"
        android:textColorHint="@color/editTexts"
        app:hintEnabled="false">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/startsEditText"
            android:layout_width="match_parent"
            android:inputType="datetime"
            android:layout_height="wrap_content"
            android:textColorHint="@color/editTexts"
            android:drawableRight="@drawable/ic_clock_black_24dp"
            android:focusable="false"
            android:textSize="@dimen/font_size_edittext" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/nbrPeopleTextView"
        android:text="@string/nbr_people_create_fragment"
        android:textSize="@dimen/font_size_textview"
        android:textColor="@color/textViews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/endsLayout"
        android:layout_centerHorizontal="true" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/nbrPeopleLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/nbrPeopleTextView"
        android:layout_alignStart="@id/nbrPeopleTextView"
        android:layout_marginLeft="-20dp"
        android:layout_marginRight="-20dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/nbrPeopleTextView"
        android:textColorHint="@color/editTexts"
        app:hintEnabled="false">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/nbrPeopleEditText"
            android:layout_width="match_parent"
            android:inputType="datetime"
            android:layout_height="wrap_content"
            android:textColorHint="@color/editTexts"
            android:focusable="false"
            android:textSize="@dimen/font_size_edittext" />
    </android.support.design.widget.TextInputLayout>




</RelativeLayout>
